--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,17 +1,24 @@
 .app-header {
-  width: 100vw;
-  margin-left: calc(-50vw + 50%);
+
+  width: 100%;
+  max-width:880px;
+  /* margin-left: calc(-50vw + 50%); */
   background: rgba(255, 255, 255, 0.95);
-  padding: 1.5rem 2rem;
+  /* padding: 1.5rem 2rem; */
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  box-sizing: border-box;
   margin-bottom: 2rem;
-  position: sticky;
+  position: relative;
   top: 0;
   z-index: 100;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  /* justify-content: space-between;
+  align-items: center; */
+  margin:0 auto 2em;
+  padding:1em;
+
 }
+
 
 .app-header h1 {
   color: #333;
