--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,5 +1,5 @@
 body {
-  background: linear-gradient(to bottom, #f5f5dc 0%, #90ee90 100%);
+  background: linear-gradient(to bottom, #fffbee 0%, #4e8a49 100%);
   min-height: 100vh;
   margin: 0;
 }
