--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,23 @@
 }
 
 body {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Balsamiq Sans", -apple-system, "Segoe UI", Roboto, Arial,
+    sans-serif;
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+@font-face {
+  font-family: "Balsamiq Sans";
+  font-style: normal;
+  font-weight: 400;
+  src: url("/fonts/BalsamiqSans-Regular.ttf") format("truetype");
+  font-display: swap;
+}
+@font-face {
+  font-family: "Balsamiq Sans";
+  font-style: bold;
+  font-weight: 700;
+  src: url("/fonts/BalsamiqSans-Bold.ttf") format("truetype");
+  font-display: swap;
 }
